# umwelt

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md
docs/guide/: entity-reference.md  how-it-works.md  plugins.md  policy-engine.md  sql-integration.md  sql-schema.md  world-files.md  writing-views.md
docs/vision/: README.md  entity-model.md  evaluation-framework.md  implementation-language.md  linter.md  package-design.md  policy-layer.md  view-format.md  world-state.md
src/umwelt/: __init__.py  ast.py  audit.py  check_util.py  cli.py  diff_util.py  dry_run.py  errors.py  inspect_util.py  parser.py  validate.py
tests/: test_audit.py  test_cli_world.py  test_diff.py
tests/cascade/: test_cross_axis_specificity.py  test_determinism.py  test_world_filter.py
tests/core/: test_altitude_filtering.py  test_ast.py  test_cascade.py  test_cascade_comparison.py  test_cascade_compound.py  test_cascade_patterns.py  test_check.py  test_cli.py  test_compiler_options.py  test_compiler_protocol.py  test_dry_run.py  test_errors.py  test_of_attr_parse.py  test_parser_basic.py  test_parser_declarations.py  test_parser_disambiguation.py  test_parser_modes.py  test_parser_resolution.py  test_parser_selectors.py  test_parser_warnings.py  test_public_api.py  test_registry_entities.py  test_registry_matchers.py  test_registry_properties.py  test_registry_taxa.py  test_selector_combinators.py  test_selector_match_complex.py  test_selector_match_simple.py  test_specificity.py  test_validate.py
tests/policy/: conftest.py  test_bug_regressions.py  test_context_qualifiers.py  test_engine.py  test_fixed_constraints.py  test_integration.py  test_lint.py  test_lint_cli.py  test_lint_config.py  test_lint_integration.py  test_lint_new_detectors.py  test_mode_filtering.py  test_novel_multi_tenant.py  (+5 more)
(+175 files in other folders)
